exports[`(.not).toHaveInternalServerErrorStatus > using axios > .not.toHaveInternalServerErrorStatus > fails when response have status code 500 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveInternalServerErrorStatus()</intensity>

Expected status code to not be 500 received:
  <red>500</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 500,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveInternalServerErrorStatus > using axios > .toHaveInternalServerErrorStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveInternalServerErrorStatus()</intensity>

Expected status code to be 500 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
